telecom-bretagne/javacompiler/SecondPhase/tests/Good/TestCallVarFather.java
class B{
	
	int a1;

}

class A extends B{
	int a2;

	void test(int a3){
		int b = a1;
	}

}