telecom-bretagne/javacompiler/SecondPhase/tests/Fail/TestMethodModifFail.java
class A {}
class B {
	private native strictfp int test(int var){}
}
